Fix body overflow when menu is open (smaller screen)

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -26,7 +26,9 @@ body {
   // Improve text rendering
   -webkit-font-smoothing: antialiased;
   &.menu-open {
-    overflow: hidden;
+    @media(max-width: toRem(1024px)) {
+      overflow: hidden;
+    }
   }
 }
 
